--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -10,8 +10,8 @@
     />
   </head>
 
-  <body>
-    <div id="app"></div>
+  <body class="bg-white dark:bg-gray-800 select-none">
+    <div id="app" class="p-5"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
