--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -8,6 +8,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src *"
     />
+    <script src="/src/easteregg.js"></script>
   </head>
 
   <body class="bg-white dark:bg-gray-800 select-none">
