--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -11,7 +11,7 @@
     <script src="/src/easteregg.js"></script>
   </head>
 
-  <body class="bg-white dark:bg-gray-800 select-none">
+  <body class="bg-white dark:bg-gray-800 select-none font-serif">
     <div id="app" class="p-5"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
