Little UI tweaks

--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body class="bg-white dark:bg-gray-800 select-none font-serif">
-    <div id="app" class="p-5"></div>
+    <div id="app" class="p-5 flex flex-col h-dvh"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
