10 eerste ontwerpen nabouwen in de frontend niet functioneel (#31)
* Add temp files

* Update gitignore

* Changed some backend code to be fully functional again for developing in codespace

* Removed boilerplate and setup structure

* Include nav buttons

* Menubar WIP

* Add console easter egg for fun

* Added temporary html designs of app screens

* Copied some design elements to flowbite/tailwind elements

* Refactor menu bar and schedule components

* Add footer to other pages

* Home and error page finished and edited some things in menubar and other codes

* Kleine aanpassingen

* Little UI tweaks

* Deploy API to leerlingsites

* Remove temp html files

---------

Co-authored-by: David Jongeneel <87093557+DVDdisk7@users.noreply.github.com>

--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -8,10 +8,11 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src *"
     />
+    <script src="/src/easteregg.js"></script>
   </head>
 
-  <body>
-    <div id="app"></div>
+  <body class="bg-white dark:bg-gray-800 select-none font-serif">
+    <div id="app" class="p-5 flex flex-col h-dvh"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
