--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <title>Mijn Rooster</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;600;700&display=swap" rel="stylesheet">
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src *"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src *; font-src *"
     />
     <script src="/src/easteregg.js"></script>
   </head>
