--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -9,7 +9,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src *"
     />
-    <script src="/src/easteregg.js"></script>
+    <script type="module" src="/src/easteregg.js"></script>
   </head>
 
   <body class="bg-white dark:bg-gray-800 select-none font-serif">
