--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html lang="nl" class="light">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Mijn Rooster</title>
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src *"
+    />
+    <script type="module" src="/src/easteregg.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Mijn Rooster</title>
-  <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;600;700&display=swap" rel="stylesheet" />
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src *" />
-  <script type="module" src="/src/easteregg.js"></script>
-</head>
-
-<body class="bg-white select-none font-serif">
-  <div id="app" class="p-5 flex flex-col h-dvh"></div>
-  <script type="module" src="/src/main.js"></script>
-</body>
-
+  <body class="bg-white select-none font-serif">
+    <div id="app" class="p-5 flex flex-col h-dvh"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
